add background, lower balls, movement to lower balls, correct layout

--- a/index.html
+++ b/index.html
@@ -16,47 +16,97 @@
 		<div id="framework">			
 			<div id="upper-row">
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="billion-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="billion-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-million-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="houndred-million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-million-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="ten-million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="million-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-thousand-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="houndred-thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-thousand-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="ten-thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="thousand-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="houndred-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="ten-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="unit-five" class="five" src="img/cat-pin.png" alt="gold rhombus">
+					<img id="unit-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>								
 			</div>
 			<div id="lower-row">				
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
-				<div class="col-10"><div class="vertical-line"></div></div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="billion-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="billion-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="billion-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="billion-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="houndred-million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="ten-million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="houndred-thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="ten-thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower" ><div class="vertical-line"></div>
+					<img id="thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="houndred-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="houndred-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="ten-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="ten-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
+				<div class="col-10 lower"><div class="vertical-line"></div>
+					<img id="unit-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="unit-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="unit-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="unit-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+				</div>
 			</div>			
 		</div>
 	</div>
