add operators buttons and a display

--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
 				</div>
 			</div>			
 		</div>
+		<div id="console">
+			<div id="operands">
+				<img src="img/clean.png" alt="clean wood texture icon" class="operands-buttons">
+				<img src="img/plus.jpg" alt="plus wood texture icon" class="operands-buttons">
+				<img src="img/minus.jpg" alt="minus wood texture icon" class="operands-buttons">
+				<img src="img/times.png" alt="multiplication wood texture icon" class="operands-buttons">
+				<img src="img/division.png" alt="division wood texture icon" class="operands-buttons">
+				<img src="img/equal.png" alt="equal wood texture icon" class="operands-buttons">
+			</div>
+			<div id="display">	
+				<img src="img/wood.jpg" alt="" id="diplay-img">			
+			</div>			
+		</div>
 	</div>
 </body>
 </html>
