--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>	
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <link rel="stylesheet" href="css/style.css">	
 	<link href="css/bootstrap.min.css" rel="stylesheet">	
 	<link href='https://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
@@ -12,7 +11,7 @@
 	<title>Amazing Calculator</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container-flex">
 		<div id="framework">			
 			<div id="upper-row">
 				<div class="col-10"><div class="vertical-line"></div>
