add blackboard img to display

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<img src="img/equal.png" alt="equal wood texture icon" class="operands-buttons">
 			</div>
 			<div id="display">	
-				<img src="img/wood.jpg" alt="" id="diplay-img">			
+				<img src="img/blackboard.jpg" alt="" id="diplay-img">			
 			</div>			
 		</div>
 	</div>
