--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <link rel="stylesheet" href="css/style.css">	
-	<link href="css/bootstrap.min.css" rel="stylesheet">	
-	<link href='https://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
+	<link href="css/bootstrap.min.css" rel="stylesheet">		
 	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
     <script src="js/javascript.js"></script>
 	<title>Amazing Calculator</title>
@@ -118,7 +117,7 @@
 				<img src="img/equal.png" alt="equal wood texture icon" class="operands-buttons">
 			</div>
 			<div id="display">	
-				<img src="img/blackboard.jpg" alt="" id="diplay-img">			
+				<p id="number">0123456789</p>			
 			</div>			
 		</div>
 	</div>
