--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>	
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
+    <meta http-equiv="X-UA-Compatible" concol8t="IE=edge">    
     <link rel="stylesheet" href="css/style.css">	
 	<link href="css/bootstrap.min.css" rel="stylesheet">		
 	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
@@ -14,96 +14,96 @@
 		<div id="framework">			
 			<div id="upper-row">
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="billion-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col9-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col8-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col7-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="million-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col6-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col5-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col4-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="thousand-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col3-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="houndred-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col2-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="ten-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col1-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10"><div class="vertical-line"></div>
-					<img id="unit-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col0-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
 				</div>								
 			</div>
 			<div id="lower-row">				
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="billion-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="billion-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="billion-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="billion-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col9-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col9-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col9-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col9-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="houndred-million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col8-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col8-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col8-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col8-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="ten-million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col7-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col7-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col7-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col7-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="million-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="million-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="million-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="million-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col6-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col6-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col6-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col6-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="houndred-thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col5-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col5-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col5-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col5-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="ten-thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col4-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col4-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col4-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col4-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower" ><div class="vertical-line"></div>
-					<img id="thousand-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="thousand-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="thousand-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="thousand-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col3-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col3-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col3-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col3-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="houndred-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="houndred-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col2-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col2-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col2-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col2-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="ten-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="ten-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col1-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col1-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col1-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col1-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="unit-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="unit-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="unit-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="unit-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col0-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col0-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col0-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+					<img id="col0-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
 				</div>
 			</div>			
 		</div>
@@ -117,7 +117,7 @@
 				<img src="img/equal.png" alt="equal wood texture icon" class="operands-buttons">
 			</div>
 			<div id="display">	
-				<p id="number">0123456789</p>			
+				<p id="number">0</p>			
 			</div>			
 		</div>
 	</div>
