--- a/index.html
+++ b/index.html
@@ -11,114 +11,114 @@
 </head>
 <body>
 	<div class="container-flex">
-		<div id="framework">			
-			<div id="upper-row"> 		
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col9-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+		<div id="abacus" class="container-flex">
+			<div id="framework">			
+				<div id="upper-row"> 		
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col9-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col8-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col7-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col6-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col5-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col4-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col3-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col2-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col1-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10"><div class="vertical-line"></div>
+						<img id="col0-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
+					</div>								
 				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col8-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col7-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col6-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col5-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col4-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col3-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col2-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col1-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10"><div class="vertical-line"></div>
-					<img id="col0-5" class="ball5" src="img/cat-pin.png" alt="cat face icon">
-				</div>								
+				<div id="lower-row">						
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col9-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col9-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col9-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col9-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col8-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col8-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col8-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col8-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col7-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col7-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col7-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col7-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col6-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col6-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col6-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col6-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col5-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col5-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col5-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col5-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col4-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col4-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col4-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col4-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower" ><div class="vertical-line"></div>
+						<img id="col3-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col3-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col3-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col3-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col2-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col2-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col2-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col2-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col1-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col1-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col1-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col1-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+					<div class="col-10 lower"><div class="vertical-line"></div>
+						<img id="col0-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col0-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col0-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
+						<img id="col0-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
+					</div>
+				</div>			
+			</div>				
+			<div id="operators">
+				<img id="clean" src="img/clean.png" alt="clean wood texture icon" class="operator-button">
+				<img id="add" src="img/plus.jpg" alt="plus wood texture icon" class="operator-button">
+				<img id="extract" src="img/minus.jpg" alt="minus wood texture icon" class="operator-button">
+				<img id="multiply" src="img/times.png" alt="multiplication wood texture icon" class="operator-button">
+				<img id="divide" src="img/division.png" alt="division wood texture icon" class="operator-button">
+				<img id="result" src="img/equal.png" alt="equal wood texture icon" class="operator-button">
 			</div>
-			<div id="lower-row">						
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col9-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col9-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col9-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col9-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col8-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col8-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col8-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col8-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col7-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col7-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col7-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col7-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col6-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col6-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col6-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col6-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col5-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col5-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col5-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col5-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col4-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col4-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col4-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col4-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower" ><div class="vertical-line"></div>
-					<img id="col3-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col3-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col3-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col3-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col2-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col2-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col2-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col2-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col1-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col1-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col1-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col1-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-				<div class="col-10 lower"><div class="vertical-line"></div>
-					<img id="col0-4" class="ball4" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col0-3" class="ball3" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col0-2" class="ball2" src="img/cat-pin.png" alt="cat face icon">
-					<img id="col0-1" class="ball1" src="img/cat-pin.png" alt="cat face icon">
-				</div>
-			</div>			
 		</div>
-		<div id="console">
-			<div id="operands">
-				<img src="img/clean.png" alt="clean wood texture icon" class="operands-buttons">
-				<img src="img/plus.jpg" alt="plus wood texture icon" class="operands-buttons">
-				<img src="img/minus.jpg" alt="minus wood texture icon" class="operands-buttons">
-				<img src="img/times.png" alt="multiplication wood texture icon" class="operands-buttons">
-				<img src="img/division.png" alt="division wood texture icon" class="operands-buttons">
-				<img src="img/equal.png" alt="equal wood texture icon" class="operands-buttons">
-			</div>
-			<div id="display">	
-				<p id="number">0</p>			
-			</div>			
+		<div id="display">	
+			<p id="number">0</p>	
 		</div>
 	</div>
 </body>
