finish all style and functionality

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" concol8t="IE=edge">    
     <link rel="stylesheet" href="css/style.css">	
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.min.css" rel="stylesheet">		
 	<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
     <script src="js/javascript.js"></script>
 	<title>Amazing Calculator</title>
 </head>
 <body>
+	<h1 id="tittle">SOROBAN CALCULATOR</h1>
 	<div class="container-flex">
 		<div id="abacus" class="container-flex">
 			<div id="framework">			
@@ -110,16 +112,19 @@
 			</div>				
 			<div id="operators">
 				<img id="clean" src="img/clean.png" alt="clean wood texture icon" class="operator-button">
-				<img id="add" src="img/plus.jpg" alt="plus wood texture icon" class="operator-button">
-				<img id="extract" src="img/minus.jpg" alt="minus wood texture icon" class="operator-button">
-				<img id="multiply" src="img/times.png" alt="multiplication wood texture icon" class="operator-button">
-				<img id="divide" src="img/division.png" alt="division wood texture icon" class="operator-button">
-				<img id="result" src="img/equal.png" alt="equal wood texture icon" class="operator-button">
+				<img id="add" src="img/plus.jpg" alt="plus wood texture icon" class="operator-button sing ">
+				<img id="extract" src="img/minus.jpg" alt="minus wood texture icon" class="operator-button sing">
+				<img id="multiply" src="img/times.png" alt="multiplication wood texture icon" class="operator-button sing">
+				<img id="divide" src="img/division.png" alt="division wood texture icon" class="operator-button sing">
+				<img id="result" src="img/equal.png" alt="equal wood texture icon" class="operator-button sing">
 			</div>
 		</div>
 		<div id="display">	
 			<p id="number">0</p>	
 		</div>
+		<footer>
+			<span id="copyleft">&copy;</span> 2016. Made by <a href="https://twitter.com/juankboards" target="_blank">JuanKboards</a>
+		</footer>
 	</div>
 </body>
 </html>
